# polarquant-kv

./: .gitignore  README.md  models  pyproject.toml
csrc/: flash_compressed_attention.cu  flash_compressed_v2.cu  flash_compressed_v3.cu  flash_compressed_v4.cu  flash_compressed_v5.cu  flash_compressed_v6.cu  flash_turboquant.cu  polarquant_full.cu  polarquant_kernels.cu  polarquant_native.cu  polarquant_pybind.cu  test_compile.cu  test_torch_ext.cu  test_wmma.cu  torch_compat.h
docs/: ds-b2-integration-guide.md  innovation-proposal.md  phase1-report.md  phase2-report.md  phase3-llama-cpp-integration-report.md  phase3-report.md  polarquant-kvcache-prd.md  turboquant-analysis-and-innovation.md  zhihu-article.md
integration/: README.md  build.bat  install.bat  install.sh  polarquant-kv.patch  pq4_err.txt  test_e2e.py
scripts/: benchmark_all_versions.py  benchmark_final.py  benchmark_flash.py  benchmark_flash_v4.py  benchmark_full_cpp.py  benchmark_fused.py  benchmark_innovations.py  benchmark_native.py  benchmark_turboquant.py  benchmark_v4.py  benchmark_v6.py  benchmark_vs_paper.py  debug_kernel.py  debug_kernel2.py  demo.py  download_model.py  e2e_qwen.py  e2e_qwen_compressed.py  e2e_real_model.py  gap_analysis.py  gpu_vs_cpu.py  profile_fused.py  run_phase1_report.py  run_phase2_report.py  test_cuda_native.py  test_cupy_kernel.py  test_torch_compile.py  verify_innovations.py
tests/: conftest.py  factories.py  strategies.py  test_attention.py  test_batch.py  test_benchmark.py  test_e2e.py  test_properties.py  test_qjl.py  test_quantizer.py  test_rotation.py
(+57 files in other folders)
