[project]
name = "polarquant-kv"
version = "0.1.0"
description = "PolarQuant + QJL KV Cache compression engine"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "psutil>=5.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["python", "src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/polarquant_kv", "src/polarquant_kv_cuda"]
